# BSUIRproject

./: README.md
kb/: example_for_generation.scs  knowledge_base_chinese_language.scs  subjcetDomianChineselanguage.scs  subjdomain_sentence.scs  web_generation.scs
kb/ui_menu/: ui_menu_na_example_commands.scs
problem-solver/py/: CMakeLists.txt
problem-solver/py/generateText/: CMakeLists.txt  geModule.cpp  geModule.hpp  geService.hpp
problem-solver/py/processingText/: CMakeLists.txt  proModule.cpp  proModule.hpp  proService.hpp
problem-solver/py/services/generateText/: TextGenAgent.py  TextGenModule.py
problem-solver/py/services/processingText/: TextProAgent.py  TextProModule.py
problem-solver/py/specification/GenerateTextAgent/: lib_component_ui_menu_generate_text.scs  ui_menu_forming_structure.scs  ui_menu_generate_text.scs
